Using sample index as id

--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -66,11 +66,16 @@
     "OUTPUT_DIR = \"experiment_results\"\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
-    "def get_sample_id(original_sample):\n",
-    "    \"\"\"Generate a unique ID for a sample based on its feature values\"\"\"\n",
-    "    # Create a hash from feature values\n",
-    "    feature_str = \"_\".join([f\"{k}_{v:.4f}\" for k, v in sorted(original_sample.items())])\n",
-    "    return hash(feature_str) & 0x7FFFFFFF  # Positive integer hash\n",
+    "def get_sample_id(sample_index):\n",
+    "    \"\"\"Generate a consistent ID for a sample based on its dataset index\n",
+    "    \n",
+    "    Args:\n",
+    "        sample_index: The original index of the sample in the dataset\n",
+    "        \n",
+    "    Returns:\n",
+    "        The sample index as the ID (ensures same sample always gets same ID)\n",
+    "    \"\"\"\n",
+    "    return int(sample_index)\n",
     "\n",
     "def save_sample_metadata(sample_id, original_sample, predicted_class, target_class, sample_index=None):\n",
     "    \"\"\"Save metadata about the sample\"\"\"\n",
@@ -348,16 +353,16 @@
     "INITIAL_POPULATION_SIZE = 20\n",
     "MAX_GENERATIONS = 60\n",
     "\n",
-    "# Generate and save sample ID and metadata\n",
-    "SAMPLE_ID = get_sample_id(ORIGINAL_SAMPLE)\n",
+    "# Get sample index and generate sample ID\n",
     "selected_row = random_samples_df.loc[sample_selector.value]\n",
     "SAMPLE_INDEX = int(selected_row['index'])\n",
+    "SAMPLE_ID = get_sample_id(SAMPLE_INDEX)  # Use sample index as ID for consistency\n",
     "save_sample_metadata(SAMPLE_ID, ORIGINAL_SAMPLE, ORIGINAL_SAMPLE_PREDICTED_CLASS[0], TARGET_CLASS, SAMPLE_INDEX)\n",
     "\n",
-    "print(f\"Sample ID: {SAMPLE_ID}\")\n",
+    "print(f\"Sample ID: {SAMPLE_ID} (dataset index: {SAMPLE_INDEX})\")\n",
     "print(f\"Original Predicted Class: {ORIGINAL_SAMPLE_PREDICTED_CLASS[0]}\")\n",
     "print(f\"Total possible rule combinations: {len(RULES_COMBINATIONS)}\")\n",
-    "print(f\"Testing {NUMBER_OF_COMBINATIONS_TO_TEST} combinations\")\n"
+    "print(f\"Testing {NUMBER_OF_COMBINATIONS_TO_TEST} combinations\")"
    ]
   },
   {
