Doing half of the combinations

--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -344,7 +344,7 @@
     "TARGET_CLASS = 0\n",
     "\n",
     "\n",
-    "NUMBER_OF_COMBINATIONS_TO_TEST = len(RULES_COMBINATIONS)\n",
+    "NUMBER_OF_COMBINATIONS_TO_TEST = int(len(RULES_COMBINATIONS)/2)\n",
     "print(f\"NUMBER_OF_COMBINATIONS_TO_TEST set to {NUMBER_OF_COMBINATIONS_TO_TEST}\")\n",
     "\n",
     "# NUMBER_OF_COMBINATIONS_TO_TEST = 9\n",
