Filling table with dropdown selection

--- a/experiment_visualization.ipynb
+++ b/experiment_visualization.ipynb
@@ -487,6 +487,11 @@
     "                combined_label.value = \"<b>No combinations available</b>\"\n",
     "                loading_status.value = f\"✓ Sample {sample_id} loaded (no combinations)\"\n",
     "                \n",
+    "            # --- FIX: Set global variables for summary table cell ---\n",
+    "            global CURRENT_LAZY_LOADER, CURRENT_METADATA\n",
+    "            CURRENT_LAZY_LOADER = STATE['loader']\n",
+    "            CURRENT_METADATA = STATE['metadata']\n",
+    "            # ------------------------------------------------------\n",
     "        except Exception as e:\n",
     "            loading_status.value = f\"✗ Error displaying sample {sample_id}: {str(e)}\"\n",
     "            print(f\"Error: {e}\")\n",
