Implementing metrics from scamander

--- a/experiment_visualization.ipynb
+++ b/experiment_visualization.ipynb
@@ -667,6 +667,125 @@
     "else:\n",
     "    print(\"⚠ No sample loaded. Please run the interactive visualization cell above and select a sample first.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('Scamander')\n",
+    "\n",
+    "from cf_eval.metrics import (\n",
+    "    nbr_valid_cf,\n",
+    "    perc_valid_cf,\n",
+    "    continuous_distance,\n",
+    "    avg_nbr_changes_per_cf,\n",
+    "    nbr_changes_per_cf\n",
+    ")\n",
+    "\n",
+    "# Check if we have loaded data\n",
+    "if 'CURRENT_LAZY_LOADER' in globals() and CURRENT_LAZY_LOADER is not None:\n",
+    "    print(\"=\"*80)\n",
+    "    print(\"COUNTERFACTUAL QUALITY METRICS EVALUATION\")\n",
+    "    print(\"=\"*80)\n",
+    "    print()\n",
+    "    \n",
+    "    # Get original sample and metadata\n",
+    "    original_sample = CURRENT_METADATA['original_sample']\n",
+    "    target_class = CURRENT_METADATA['target_class']\n",
+    "    \n",
+    "    # Convert original sample dict to numpy array\n",
+    "    x_original = np.array([original_sample[feat] for feat in CURRENT_METADATA['features_names']])\n",
+    "    y_original = MODEL.predict(x_original.reshape(1, -1))[0]\n",
+    "    \n",
+    "    print(f\"Original Sample: {original_sample}\")\n",
+    "    print(f\"Predicted Class: {y_original} → Target Class: {target_class}\")\n",
+    "    print()\n",
+    "    \n",
+    "    # Collect all counterfactuals from all combinations\n",
+    "    all_metrics = []\n",
+    "    \n",
+    "    for combination_idx in range(CURRENT_METADATA['num_combinations']):\n",
+    "        combination_viz = CURRENT_LAZY_LOADER.get_combination_data(combination_idx)\n",
+    "        rules_tuple = combination_viz['label']\n",
+    "        \n",
+    "        # Collect counterfactuals for this combination\n",
+    "        cf_list = []\n",
+    "        for replication_idx, replication_viz in enumerate(combination_viz['replication']):\n",
+    "            cf_dict = replication_viz['counterfactual']\n",
+    "            cf_array = np.array([cf_dict[feat] for feat in CURRENT_METADATA['features_names']])\n",
+    "            cf_list.append(cf_array)\n",
+    "        \n",
+    "        if len(cf_list) == 0:\n",
+    "            continue\n",
+    "        \n",
+    "        cf_array = np.array(cf_list)\n",
+    "        \n",
+    "        # ====================\n",
+    "        # METRIC 1: Validity\n",
+    "        # ====================\n",
+    "        # Number and percentage of counterfactuals that achieve the desired class\n",
+    "        num_valid = nbr_valid_cf(cf_array, MODEL, y_original, y_desidered=target_class)\n",
+    "        pct_valid = perc_valid_cf(cf_array, MODEL, y_original, y_desidered=target_class)\n",
+    "        \n",
+    "        # ====================\n",
+    "        # METRIC 2: Proximity (Distance)\n",
+    "        # ====================\n",
+    "        # How close are the counterfactuals to the original sample (lower is better)\n",
+    "        # Using Euclidean distance on continuous features (all Iris features are continuous)\n",
+    "        continuous_features = list(range(len(CURRENT_METADATA['features_names'])))\n",
+    "        avg_distance = continuous_distance(x_original, cf_array, continuous_features, metric='euclidean')\n",
+    "        min_distance = continuous_distance(x_original, cf_array, continuous_features, metric='euclidean', agg='min')\n",
+    "        max_distance = continuous_distance(x_original, cf_array, continuous_features, metric='euclidean', agg='max')\n",
+    "        \n",
+    "        # ====================\n",
+    "        # METRIC 3: Sparsity (Number of Changes)\n",
+    "        # ====================\n",
+    "        # How many features were changed (fewer is better - more actionable)\n",
+    "        avg_changes = avg_nbr_changes_per_cf(x_original, cf_array, continuous_features)\n",
+    "        changes_per_cf = nbr_changes_per_cf(x_original, cf_array, continuous_features)\n",
+    "        \n",
+    "        all_metrics.append({\n",
+    "            'Combination': combination_idx + 1,\n",
+    "            'Rules': str(rules_tuple),\n",
+    "            'Num_CFs': len(cf_list),\n",
+    "            'Valid_CFs': num_valid,\n",
+    "            'Validity_%': f\"{pct_valid*100:.1f}%\",\n",
+    "            'Avg_Distance': f\"{avg_distance:.4f}\",\n",
+    "            'Min_Distance': f\"{min_distance:.4f}\",\n",
+    "            'Max_Distance': f\"{max_distance:.4f}\",\n",
+    "            'Avg_Changes': f\"{avg_changes:.2f}\",\n",
+    "            'Changes_Detail': [f\"{c:.1f}\" for c in changes_per_cf]\n",
+    "        })\n",
+    "    \n",
+    "    # Create DataFrame and display\n",
+    "    metrics_df = pd.DataFrame(all_metrics)\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*80)\n",
+    "    print(\"METRICS BY COMBINATION\")\n",
+    "    print(\"=\"*80)\n",
+    "    display(HTML(metrics_df.to_html(escape=False, index=False)))\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*80)\n",
+    "    print(\"METRIC EXPLANATIONS\")\n",
+    "    print(\"=\"*80)\n",
+    "    print(\"\"\"\n",
+    "    1. Validity: Percentage of counterfactuals that successfully achieve the target class\n",
+    "       - Higher is better (100% means all CFs are valid)\n",
+    "    \n",
+    "    2. Proximity (Distance): Average Euclidean distance from original sample\n",
+    "       - Lower is better (smaller changes from original)\n",
+    "    \n",
+    "    3. Sparsity (Avg Changes): Average number of features modified per counterfactual\n",
+    "       - Lower is better (fewer features changed = more actionable)\n",
+    "    \"\"\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"⚠ No sample loaded. Please run the interactive visualization cells above first.\")"
+   ]
   }
  ],
  "metadata": {
