Refactor fitness data extraction

--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -499,12 +499,14 @@
     "        'replication': []\n",
     "    }\n",
     "    for replication_viz in combination_viz['replication']:\n",
-    "        # Extract fitness history from the model before discarding it\n",
-    "        fitness_history = replication_viz['cf_model'].fitness_history if hasattr(replication_viz['cf_model'], 'fitness_history') else []\n",
+    "        # Extract fitness lists from the model (best_fitness_list and average_fitness_list)\n",
+    "        best_fitness_list = replication_viz['cf_model'].best_fitness_list if hasattr(replication_viz['cf_model'], 'best_fitness_list') else []\n",
+    "        average_fitness_list = replication_viz['cf_model'].average_fitness_list if hasattr(replication_viz['cf_model'], 'average_fitness_list') else []\n",
     "        \n",
     "        rep_copy = {\n",
     "            'counterfactual': replication_viz['counterfactual'],\n",
-    "            'fitness_history': fitness_history\n",
+    "            'best_fitness_list': best_fitness_list,\n",
+    "            'average_fitness_list': average_fitness_list\n",
     "        }\n",
     "        combo_copy['replication'].append(rep_copy)\n",
     "    raw_data['visualizations_structure'].append(combo_copy)\n",
@@ -512,8 +514,7 @@
     "raw_filepath = os.path.join(OUTPUT_DIR, f\"sample_{SAMPLE_ID}_raw_counterfactuals.pkl\")\n",
     "with open(raw_filepath, 'wb') as f:\n",
     "    pickle.dump(raw_data, f)\n",
-    "print(f\"\\nSaved raw counterfactuals data to {raw_filepath}\")\n",
-    "\n"
+    "print(f\"\\nSaved raw counterfactuals data to {raw_filepath}\")\n"
    ]
   },
   {
