Add sample selector widget

--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -47,6 +47,10 @@
     "                                     plot_pca_with_counterfactuals, plot_explainer_summary)\n",
     "from CounterFactualExplainer import CounterFactualExplainer\n",
     "\n",
+    "import pickle\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
@@ -57,10 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# File-based storage utilities\n",
-    "import pickle\n",
-    "import os\n",
-    "from datetime import datetime\n",
     "\n",
     "# Create output directory for storing experiment results\n",
     "OUTPUT_DIR = \"experiment_results\"\n",
@@ -170,158 +170,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display 30 random samples from the Iris dataset\n",
-    "from ipywidgets import RadioButtons, VBox, Output, Button, Layout\n",
-    "from IPython.display import display, clear_output\n",
-    "\n",
-    "np.random.seed(42)  # For reproducibility\n",
-    "num_samples = 30\n",
-    "total_samples = len(IRIS_FEATURES)\n",
-    "\n",
-    "# Generate random indices\n",
-    "random_indices = np.random.choice(total_samples, size=min(num_samples, total_samples), replace=False)\n",
-    "\n",
-    "# Create DataFrame with random samples\n",
-    "random_samples_df = pd.DataFrame(\n",
-    "    IRIS_FEATURES[random_indices],\n",
-    "    columns=IRIS.feature_names\n",
-    ")\n",
-    "random_samples_df['target'] = IRIS_LABELS[random_indices]\n",
-    "random_samples_df['target_name'] = [IRIS.target_names[label] for label in IRIS_LABELS[random_indices]]\n",
-    "random_samples_df['index'] = random_indices\n",
-    "\n",
-    "print(f\"Displaying {len(random_samples_df)} random samples from the Iris dataset:\")\n",
-    "print(f\"Total dataset size: {total_samples}\\n\")\n",
+    "# Display 30 random samples from the Iris dataset using the sample selector widget\n",
+    "from utils.notebooks.sample_selector import create_sample_selector_widget\n",
     "\n",
     "# Create a temporary CounterFactualModel instance to validate constraints\n",
     "temp_cf_model = CounterFactualModel(MODEL, CONSTRAINTS, verbose=False)\n",
     "\n",
-    "# Create radio button options with constraint validation\n",
-    "radio_options = []\n",
-    "for idx, row in random_samples_df.iterrows():\n",
-    "    # Convert row to sample dict\n",
-    "    sample_dict = {\n",
-    "        'sepal length (cm)': row['sepal length (cm)'],\n",
-    "        'sepal width (cm)': row['sepal width (cm)'],\n",
-    "        'petal length (cm)': row['petal length (cm)'],\n",
-    "        'petal width (cm)': row['petal width (cm)']\n",
-    "    }\n",
-    "    \n",
-    "    # Get the target class for this sample\n",
-    "    sample_target_class = int(row['target'])\n",
-    "    \n",
-    "    # Validate constraints for this sample against its own class constraints\n",
-    "    is_valid, penalty = temp_cf_model.validate_constraints(sample_dict, sample_dict, sample_target_class)\n",
-    "    \n",
-    "    # Create validation indicator\n",
-    "    validation_status = \"✓\" if is_valid else f\"✗ (penalty: {penalty:.2f})\"\n",
-    "    \n",
-    "    # Build label with constraint validation\n",
-    "    feature_str = \" | \".join([f\"{col}: {row[col]:.2f}\" for col in IRIS.feature_names])\n",
-    "    label = f\"#{idx} | idx:{int(row['index'])} | {validation_status} | {feature_str} | class: {int(row['target'])} ({row['target_name']})\"\n",
-    "    radio_options.append((label, idx))\n",
-    "\n",
-    "# Create radio buttons widget\n",
-    "sample_selector = RadioButtons(\n",
-    "    options=radio_options,\n",
-    "    value=random_samples_df.index[0],  # Select first sample by default\n",
-    "    description='Select:',\n",
-    "    layout=Layout(width='100%', height='400px'),\n",
-    "    style={'description_width': 'initial'}\n",
+    "# Create the sample selector widget\n",
+    "widget, state = create_sample_selector_widget(\n",
+    "    features=IRIS_FEATURES,\n",
+    "    labels=IRIS_LABELS,\n",
+    "    feature_names=IRIS.feature_names,\n",
+    "    target_names=IRIS.target_names,\n",
+    "    cf_model=temp_cf_model,\n",
+    "    constraints=CONSTRAINTS,\n",
+    "    class_colors_list=CLASS_COLORS_LIST,\n",
+    "    plot_constraints_fn=plot_constraints,\n",
+    "    num_samples=30,\n",
+    "    random_seed=42\n",
     ")\n",
     "\n",
-    "# Output area for displaying selected sample details\n",
-    "output_area = Output()\n",
+    "# Display the widget\n",
+    "display(widget)\n",
     "\n",
-    "# Output area for constraint visualizations\n",
-    "constraints_viz_area = Output()\n",
-    "\n",
-    "# Button to confirm selection\n",
-    "confirm_button = Button(\n",
-    "    description='Use Selected Sample',\n",
-    "    button_style='success',\n",
-    "    tooltip='Click to update ORIGINAL_SAMPLE with the selected sample',\n",
-    "    layout=Layout(width='200px')\n",
-    ")\n",
-    "\n",
-    "# Variable to track if selection was made\n",
-    "selection_confirmed = False\n",
-    "\n",
-    "def update_sample_and_plots(selected_idx):\n",
-    "    \"\"\"Update ORIGINAL_SAMPLE and re-render constraint plots\"\"\"\n",
-    "    global ORIGINAL_SAMPLE, SAMPLE_DATAFRAME\n",
-    "    selected_row = random_samples_df.loc[selected_idx]\n",
-    "    \n",
-    "    # Update ORIGINAL_SAMPLE\n",
-    "    ORIGINAL_SAMPLE = {\n",
-    "        'sepal length (cm)': selected_row['sepal length (cm)'],\n",
-    "        'sepal width (cm)': selected_row['sepal width (cm)'],\n",
-    "        'petal length (cm)': selected_row['petal length (cm)'],\n",
-    "        'petal width (cm)': selected_row['petal width (cm)']\n",
-    "    }\n",
-    "    SAMPLE_DATAFRAME = pd.DataFrame([ORIGINAL_SAMPLE])\n",
-    "    \n",
-    "    # Get the sample class\n",
-    "    sample_class = int(selected_row['target'])\n",
-    "    \n",
-    "    # Update output area with sample info\n",
-    "    with output_area:\n",
-    "        clear_output()\n",
-    "        print(f\"Selected sample (original index: {int(selected_row['index'])}):\")\n",
-    "        print(f\"Target class: {sample_class} ({selected_row['target_name']})\")\n",
-    "        \n",
-    "        # Validate and show constraint status\n",
-    "        is_valid, penalty = temp_cf_model.validate_constraints(ORIGINAL_SAMPLE, ORIGINAL_SAMPLE, sample_class)\n",
-    "        print(f\"Constraint validation: {'✓ Valid' if is_valid else f'✗ Invalid (penalty: {penalty:.2f})'}\")\n",
-    "        \n",
-    "        print(\"\\nCurrent ORIGINAL_SAMPLE values:\")\n",
-    "        for key, value in ORIGINAL_SAMPLE.items():\n",
-    "            print(f\"  {key}: {value}\")\n",
-    "    \n",
-    "    # Update constraint visualizations with sample_class\n",
-    "    with constraints_viz_area:\n",
-    "        clear_output(wait=True)\n",
-    "        display(plot_constraints(CONSTRAINTS, overlapping=False, class_colors_list=CLASS_COLORS_LIST, sample=ORIGINAL_SAMPLE, sample_class=sample_class))\n",
-    "        display(plot_constraints(CONSTRAINTS, overlapping=True, class_colors_list=CLASS_COLORS_LIST, sample=ORIGINAL_SAMPLE, sample_class=sample_class))\n",
-    "\n",
-    "def on_sample_change(change):\n",
-    "    \"\"\"Handle radio button selection change\"\"\"\n",
-    "    selected_idx = change['new']\n",
-    "    update_sample_and_plots(selected_idx)\n",
-    "\n",
-    "def on_confirm_click(b):\n",
-    "    global selection_confirmed\n",
-    "    selection_confirmed = True\n",
-    "    \n",
-    "    with output_area:\n",
-    "        clear_output()\n",
-    "        print(\"✓ ORIGINAL_SAMPLE confirmed!\")\n",
-    "        selected_idx = sample_selector.value\n",
-    "        selected_row = random_samples_df.loc[selected_idx]\n",
-    "        print(f\"\\nConfirmed sample (original index: {int(selected_row['index'])}):\")\n",
-    "        print(f\"Target class: {int(selected_row['target'])} ({selected_row['target_name']})\")\n",
-    "        \n",
-    "        # Validate and show constraint status\n",
-    "        sample_target_class = int(selected_row['target'])\n",
-    "        is_valid, penalty = temp_cf_model.validate_constraints(ORIGINAL_SAMPLE, ORIGINAL_SAMPLE, sample_target_class)\n",
-    "        print(f\"Constraint validation: {'✓ Valid' if is_valid else f'✗ Invalid (penalty: {penalty:.2f})'}\")\n",
-    "        \n",
-    "        print(\"\\nConfirmed ORIGINAL_SAMPLE values:\")\n",
-    "        for key, value in ORIGINAL_SAMPLE.items():\n",
-    "            print(f\"  {key}: {value}\")\n",
-    "\n",
-    "# Attach event handlers\n",
-    "sample_selector.observe(on_sample_change, names='value')\n",
-    "confirm_button.on_click(on_confirm_click)\n",
-    "\n",
-    "# Display the widgets\n",
-    "display(VBox([sample_selector, confirm_button, output_area, constraints_viz_area]))\n",
-    "\n",
-    "# Auto-select first sample for \"Run All\" functionality\n",
-    "if not selection_confirmed:\n",
-    "    selected_idx = random_samples_df.index[0]\n",
-    "    update_sample_and_plots(selected_idx)\n",
-    "    print(f\"\\n→ First sample auto-selected (index: {int(random_samples_df.loc[selected_idx]['index'])}, class: {random_samples_df.loc[selected_idx]['target_name']})\")\n"
+    "# Extract state variables for use in subsequent cells\n",
+    "ORIGINAL_SAMPLE = state['ORIGINAL_SAMPLE']\n",
+    "SAMPLE_DATAFRAME = state['SAMPLE_DATAFRAME']\n",
+    "random_samples_df = state['random_samples_df']\n",
+    "sample_selector = state['sample_selector']\n",
+    "selection_confirmed = state['selection_confirmed']\n"
    ]
   },
   {
