Refactor constraint extraction

--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -92,106 +92,8 @@
     "MODEL = RandomForestClassifier(n_estimators=3, random_state=42)\n",
     "MODEL.fit(TRAIN_FEATURES, TRAIN_LABELS)\n",
     "\n",
-    "# Extract constraints from dataset using DPG\n",
-    "import sys\n",
-    "sys.path.insert(0, os.path.abspath('DPG'))\n",
-    "from dpg.core import DecisionPredicateGraph\n",
-    "import numpy as np\n",
-    "\n",
-    "def extract_constraints_from_dataset(model, train_features, train_labels, feature_names):\n",
-    "    \"\"\"\n",
-    "    Extract constraints from the dataset using Decision Predicate Graph (DPG).\n",
-    "    \n",
-    "    Args:\n",
-    "        model: Trained sklearn model\n",
-    "        train_features: Training features array\n",
-    "        train_labels: Training labels array\n",
-    "        feature_names: List of feature names\n",
-    "        \n",
-    "    Returns:\n",
-    "        Dictionary mapping class labels to feature constraints (min/max format)\n",
-    "    \"\"\"\n",
-    "    # Build DPG from the trained model\n",
-    "    config_path = os.path.join('DPG', 'config.yaml')\n",
-    "    dpg = DecisionPredicateGraph(\n",
-    "        model=model,\n",
-    "        feature_names=feature_names,\n",
-    "        target_names=np.unique(train_labels).astype(str).tolist(),\n",
-    "        config_file=config_path\n",
-    "    )\n",
-    "    dot = dpg.fit(train_features)\n",
-    "    \n",
-    "    # Convert the Digraph object to string\n",
-    "    dot_string = dot.source if hasattr(dot, 'source') else str(dot)\n",
-    "    \n",
-    "    # Extract decision rules from the graph\n",
-    "    # Parse the graph to extract feature bounds per class\n",
-    "    constraints_dict = {}\n",
-    "    \n",
-    "    # Parse DOT graph to extract constraints\n",
-    "    for line in dot_string.split('\\n'):\n",
-    "        line = line.strip()\n",
-    "        if '->' in line and '[label=' in line:\n",
-    "            # Extract feature conditions from edges\n",
-    "            try:\n",
-    "                label_start = line.find('[label=\"') + 8\n",
-    "                label_end = line.find('\"]', label_start)\n",
-    "                if label_start > 7 and label_end > label_start:\n",
-    "                    label = line[label_start:label_end]\n",
-    "                    \n",
-    "                    # Parse conditions like \"feature <= value\" or \"feature > value\"\n",
-    "                    for condition in label.split('\\\\n'):\n",
-    "                        condition = condition.strip()\n",
-    "                        if '<=' in condition or '>' in condition or '<' in condition or '>=' in condition:\n",
-    "                            for feat_name in feature_names:\n",
-    "                                if feat_name in condition:\n",
-    "                                    # Will be processed in next step\n",
-    "                                    pass\n",
-    "            except:\n",
-    "                pass\n",
-    "        elif 'label=' in line and 'Class' in line:\n",
-    "            # Extract class nodes\n",
-    "            try:\n",
-    "                label_start = line.find('label=\"') + 7\n",
-    "                label_end = line.find('\"', label_start)\n",
-    "                if label_start > 6 and label_end > label_start:\n",
-    "                    label = line[label_start:label_end]\n",
-    "                    if 'Class' in label:\n",
-    "                        class_name = label.replace('Class ', '').strip()\n",
-    "                        if class_name not in constraints_dict:\n",
-    "                            constraints_dict[class_name] = {}\n",
-    "            except:\n",
-    "                pass\n",
-    "    \n",
-    "    # Initialize constraint structure for each class with feature bounds\n",
-    "    for class_label in np.unique(train_labels):\n",
-    "        class_str = str(class_label)\n",
-    "        if class_str not in constraints_dict:\n",
-    "            constraints_dict[class_str] = {}\n",
-    "        \n",
-    "        # For each feature, find min/max bounds from training data for this class\n",
-    "        class_mask = train_labels == class_label\n",
-    "        class_features = train_features[class_mask]\n",
-    "        \n",
-    "        for idx, feat_name in enumerate(feature_names):\n",
-    "            feat_values = class_features[:, idx]\n",
-    "            constraints_dict[class_str][feat_name] = {\n",
-    "                'min': float(np.percentile(feat_values, 5)),  # Use 5th percentile as lower bound\n",
-    "                'max': float(np.percentile(feat_values, 95))  # Use 95th percentile as upper bound\n",
-    "            }\n",
-    "    \n",
-    "    # Convert to expected format: {class: [{'feature': name, 'min': val, 'max': val}, ...]}\n",
-    "    formatted_constraints = {}\n",
-    "    for class_label, feature_bounds in constraints_dict.items():\n",
-    "        formatted_constraints[f\"Class {class_label}\"] = [\n",
-    "            {'feature': feat_name, 'min': bounds['min'], 'max': bounds['max']}\n",
-    "            for feat_name, bounds in feature_bounds.items()\n",
-    "        ]\n",
-    "    \n",
-    "    return formatted_constraints\n",
-    "\n",
-    "# Extract constraints from the training data\n",
-    "CONSTRAINTS = extract_constraints_from_dataset(MODEL, TRAIN_FEATURES, TRAIN_LABELS, IRIS.feature_names)\n",
+    "# Extract constraints from the training data using DPG\n",
+    "CONSTRAINTS = ConstraintParser.extract_constraints_from_dataset(MODEL, TRAIN_FEATURES, TRAIN_LABELS, IRIS.feature_names)\n",
     "\n",
     "print(\"Extracted Constraints from Dataset:\")\n",
     "for class_label, constraints in CONSTRAINTS.items():\n",
