--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -180,31 +180,14 @@
     "print(f\"Sample ID: {SAMPLE_ID} (dataset index: {SAMPLE_INDEX})\")\n",
     "print(f\"Original Predicted Class: {ORIGINAL_SAMPLE_PREDICTED_CLASS[0]}\")\n",
     "print(f\"Total possible rule combinations: {len(RULES_COMBINATIONS)}\")\n",
-    "print(f\"Testing {NUMBER_OF_COMBINATIONS_TO_TEST} combinations\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
-   "source": [
-    "## Constraints Extracted from DPG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f\"Testing {NUMBER_OF_COMBINATIONS_TO_TEST} combinations\")\n",
     "\n",
     "plot_pca_loadings(IRIS_FEATURES, IRIS.feature_names)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "7",
    "metadata": {},
    "source": [
     "## Generate Counterfactuals with All Rule Combinations"
@@ -213,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Generate Visualizations for Counterfactuals"
@@ -350,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Metrics"
@@ -428,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
