Reorder rules for generation

--- a/experiment_generation.ipynb
+++ b/experiment_generation.ipynb
@@ -157,7 +157,7 @@
     "COUNTERFACTUAL_DPG = CounterFactualModel(MODEL, CONSTRAINTS, verbose=True)\n",
     "\n",
     "FEATURES_NAMES = list(ORIGINAL_SAMPLE.keys())\n",
-    "RULES = ['no_change', 'non_increasing', 'non_decreasing','none']\n",
+    "RULES = ['none','no_change', 'non_increasing', 'non_decreasing']\n",
     "RULES_COMBINATIONS = list(itertools.product(RULES, repeat=len(FEATURES_NAMES)))\n",
     "\n",
     "TARGET_CLASS = 0\n",
